--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -42,6 +42,7 @@ img {
 
 .one-image {
   padding-left: 10px;
+  margin-top: 20px; 
 }
 
 .cform{
@@ -54,7 +55,7 @@ h3 h4 {
   color:  #305973; 
 }
 
-p {
+p, h2 {
   color:  #305973; 
 }
 
