Set meta viewport tag to project pages three and four.  Edited paragraph contents for projects two and three. Fixed image tag for profile photo on about page. Deleted a <p> tag from project three, alter remaining <p> contents from lorem to text. Tested and fixed anchor links on project one page.

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -44,13 +44,14 @@ img {
   height: 300px; 
 }
 
-.exhibition{
+.exhibition {
   float: right;   
 }  
 
-.one-image {
+.one-image, .two-image, .three-image{
   padding-left: 10px;
   margin-top: 20px; 
+
 }
 
 .cform{
