--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -1,27 +1,29 @@
 html {
   font-family: sans-serif, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
-  font-weight: auto; 
+  font-weight: auto;
 }
 
 body {
-  background-color: #D3DEDC;   
-}
-a{
-  text-decoration: none;
-  color: #305973; 
+  background-color: #D3DEDC;
+  padding-top: 50px;
+  max-width: 1000px;
 }
 
+a {
+  text-decoration: none;
+  color: #305973;
+}
 
 #cover {
   width: 100%;
   max-width: 800px;
-  height: auto; 
+  height: auto;
   margin-bottom: 25px;
 }
 
-ul{
+ul {
   list-style-type: none;
-  
+
 }
 
 header {
@@ -32,171 +34,61 @@ header {
 }
 
 nav {
-  width: 100%; 
+  width: 100%;
 }
 
 .landing {
-  height: 300px; 
-  margin-bottom: 50px; 
-} 
+  height: 300px;
+  margin-bottom: 50px;
+}
 
 img {
-  height: 300px; 
+  height: 300px;
+  max-width: 100%;
+  object-fit: cover;
 }
 
 .exhibition {
-  float: right;   
-}  
+  float: right;
+}
 
-.one-image, .two-image, .three-image{
+.one-image,
+.two-image,
+.three-image {
   padding-left: 10px;
-  margin-top: 20px; 
+  margin-top: 20px;
 
 }
 
 .profile {
   margin-bottom: 10px;
+
 }
 
-.cform{
-  border-radius: 5%; 
+.cform {
+  border-radius: 5%;
   align-items: flex-end;
   display: block;
-  }
-
-h3, h4 {
-  font-size: 1em;
-  color:  #305973; 
 }
 
-p, h2 {
-  color:  #305973; 
+h3,
+h4 {
+  font-size: 1em;
+  color: #305973;
+}
+
+p,
+h2 {
+  color: #305973;
 }
 
 main {
-  width: 100%; 
+  width: 100%;
+  margin-top: 50px;
 }
-
-/*
-nav {
-  border: 2px solid green; 
-  width: 800px; 
-  height: 150px; 
-  text-align: ; 
-}
-
-img {
-  height: px; 
-  width: 350px; 
-}
-
-body {
-  margin: 20px; 
-}
-
-
-
-
-.landing {
-  width: 50%; /* QUESTIONABLE
-  border: 2px solid black;
-  flex-direction: row; 
-  justify-content: space-around;
-}
-
-p {
-  align-items: flex-start;
-  width: 50%;
-}
-
-.Exhibition{
-  border: 2px green;
-  
-}
-
-.cform{
-  border-radius: 5%; 
-  align-items: flex-end;
-  }
-
-aside {
-  border: 2px solid;
-  text-align: right; 
-}  
-
-form {
-  border: 2px solid ;
-}
-
-
-
 
 footer {
-  align-self: flex-end; 
-  /* want this to the left too*/
+  text-align: center;
+  margin-top: 50px;
+}
 
-
-/*
-html {
-    font-family: sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-    /*Above code taken from GoogleFonts 
-    ;
-      }
-  
-.container {
-    display: flex; 
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}   
-  
-.signature, nav  ul {
-      list-style-type: none ;
-      font-weight: bold;
-      align-items: center;
-
-     
-    }  
-        
-
-  
-
-  
-  a:hover{
-      color: #; 
-  }
-  
-  .cover-image {
-      height: 600px;
-      justify-content: center;
-      margin-bottom: 100px;
-      width: fit-content;
-      
-  }
-  
-  img { /*specfi to anchored img*
-      
-      height: 150px; 
-      flex-direction: row; 
-  }
-  
-  .three {
-      width: ;
-  }
-  
-  
-  .landing-images :hover {
-      opacity: 75%;
-  }
-  
-  
-  
-  form {
-    ;
-  }
-  
-  
-  */
