Add css organising comments. Fix 404 link issue on contact page

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/*Global styling*/
 html {
   font-family: sans-serif, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS';
 }
@@ -85,6 +86,8 @@ main {
   width: 100%;
   margin-top: 50px;
 }
+
+/*footer styling*/
 
 footer {
   text-align: center;
