--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a {
   height: auto;
   margin-bottom: 25px;
 }
-
+/*Navigation and header styling*/
 ul {
   list-style-type: none;
 
@@ -42,6 +42,7 @@ nav {
   margin-bottom: 50px;
 }
 
+/*cover image*/
 img {
   height: 300px;
   max-width: 100%;
@@ -64,7 +65,7 @@ img {
   margin-bottom: 10px;
 
 }
-
+/*contact form styling*/
 .cform {
   border-radius: 5%;
   align-items: flex-end;
